# c-intro

./: CMakeLists.txt  main.c
syscall/: CMakeLists.txt  systemcall.c  systemcall.h
